fix: card h2 line height when wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 }
 
 /* Global Styles */
-html, body {
+html,
+body {
     background-color: var(--background);
     height: 100%;
     margin: 0;
@@ -56,7 +57,8 @@ nav {
     border-radius: 3px;
 }
 
-nav > .register-ref, .login-ref {
+nav>.register-ref,
+.login-ref {
     background-color: var(--footer-bg);
     color: white;
     border-radius: 5px;
@@ -68,12 +70,13 @@ nav > .register-ref, .login-ref {
     padding: 5px;
 }
 
-nav > .register-ref:hover, .login-ref:hover {
+nav>.register-ref:hover,
+.login-ref:hover {
     background-color: darkseagreen;
     transform: scale(1.1);
 }
 
-nav > input {
+nav>input {
     border-radius: 5px;
     width: 30%;
     height: 40%;
@@ -83,7 +86,8 @@ nav > input {
     padding: 5px;
 }
 
-nav > input:focus, input:hover {
+nav>input:focus,
+input:hover {
     transform: scale(1.05);
 }
 
@@ -163,9 +167,17 @@ footer span {
 }
 
 .card h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    vertical-align: auto;
+    min-height: 65px;
 }
+
+
+
+
+
 
 .card-img {
     border-radius: 5px 5px 0 0;
@@ -181,7 +193,8 @@ footer span {
 }
 
 /* Buttons and Icons */
-.delete-button, .cart-button {
+.delete-button,
+.cart-button {
     background-size: contain;
     transition: transform 0.2s ease;
     cursor: pointer;
@@ -201,7 +214,9 @@ footer span {
     height: 30px;
 }
 
-.delete-button:hover, .cart-button:hover, .cart-img:hover {
+.delete-button:hover,
+.cart-button:hover,
+.cart-img:hover {
     transform: scale(1.1);
 }
 
@@ -223,7 +238,7 @@ form {
     background-color: var(--card-bg);
 }
 
-form > div > input {
+form>div>input {
     width: 100%;
     height: 40px;
     border-radius: 5px;
@@ -231,7 +246,7 @@ form > div > input {
     padding: 5px;
 }
 
-form > input[type=submit] {
+form>input[type=submit] {
     width: 20%;
     height: 40px;
     font-size: x-large;
@@ -240,20 +255,22 @@ form > input[type=submit] {
     background-color: white;
 }
 
-form > input[type=submit]:hover {
+form>input[type=submit]:hover {
     transition: transform 0.2s ease;
     cursor: pointer;
 }
 
-form > input[type=submit]:active {
+form>input[type=submit]:active {
     transform: rotate(1turn);
 }
 
-form > div > input:hover, input:focus {
+form>div>input:hover,
+input:focus {
     transform: scale(1.05);
 }
 
-form > .username, .password {
+form>.username,
+.password {
     font-size: x-large;
     display: flex;
     gap: 5px;
